좋아요 오류 수정
